scrolling issue on safari ios

--- a/main.css
+++ b/main.css
@@ -115,7 +115,8 @@ h1 {
     font-size: 15px;
     line-height: 10px;
     top: 7px;
-    position: relative;
+    position: fixed;
+    right: 0;
     flex-direction: row;
     font-size: 24px;
     font-weight: 300;
